# fpoc

./: Procfile  README-i18n.md  README.md  package.json  project.clj
dev/client/cljs/: user.cljs
dev/server/: user.clj
haskellServer/: Main.hs  rest.cabal
i18n/: es.po  fpoc_French.po  fpoc_Maori.po  fr.po  mi_NZ.po
resources/public/: cards.html  index.html
resources/public/css/: bootstrap-grid.css  bootstrap-reboot.css  bootstrap.css  magicsuggest.css
resources/public/js/: magicsuggest-min.js
script/: generate_i18n_cljc.clj
src/cards/fpoc/: accounts.cljs  cards.cljs  intro.cljs
src/main/config/: defaults.edn  dev.edn
src/main/fpoc/: client.cljs  client_main.cljs  rest.cljs  restBackend.clj  server.clj  server_main.clj
src/main/fpoc/api/: mutations.clj  mutations.cljs  operations.cljc  ops2.cljc  read.clj  user_db.clj
src/main/fpoc/ui/: accountLimits.cljc  accounts.cljc  components.cljc  html5_routing.cljc  login.cljc  main.cljc  new_user.cljc  paySomeone.cljc  preferences.cljc  profile.cljc  root.cljc  user.cljc
src/main/translations/: es.cljc  fpoc_French.po.cljc  fpoc_Maori.po.cljc  fr.cljc  mi.cljc  mi_NZ.cljc
src/test/fpoc/: CI_runner.cljs  client_test_main.cljs  sample_spec.cljc  tests_to_run.cljs
src/test/fpoc/ui/: html5_routing_spec.cljs  server_side_rendering_spec.cljc
