name:          rest
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          rest
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty
                  , aeson
                  , cookie
                  , bytestring
                  , text
                  , blaze-builder
                  , http-types
                  , wai-extra
                  
